@@ -80,14 +80,20 @@
       
     <h3>Latest release</h3>
       <div class="download">
+      <a href="http://download.gnome.org/sources/tomboy/0.7/tomboy-0.7.4.tar.gz"
+      title="Source code of the latest unstable release">
+      <img src="./images/package-x-generic.png" alt="source package" />
+      Tomboy 0.7.4</a></div>
+
+      <!--<p>There is currently no separate development release.</p>-->
+      
+    <h3>Past releases</h3>
+      <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.7/tomboy-0.7.3.tar.gz"
       title="Source code of the latest unstable release">
       <img src="./images/package-x-generic.png" alt="source package" />
       Tomboy 0.7.3</a></div>
 
-      <!--<p>There is currently no separate development release.</p>-->
-      
-    <h3>Past releases</h3>
       <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.7/tomboy-0.7.2.tar.gz"
       title="Source code of the latest unstable release">
