@@ -71,6 +71,15 @@
         <div id="news">
 	    <h2 class="">News</h2>
 
+	    <h3>August 13th 2007</h3>
+   	      <b>Unstable</b> version 0.7.4 released!  New in this release:
+   	      <ul>
+   	        <li>Updated note synchronization UIs.</li>
+   	        <li>Use shift+delete to cut in a Tomboy note.</li>
+   	        <li>And <a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_7_4/NEWS?view=markup">more</a></li>
+              </ul>
+   	      <a href="download.html">Download it</a>
+
 	    <h3>July 30th 2007</h3>
    	      <b>Unstable</b> version 0.7.3 released!  New in this release:
    	      <ul>
