@@ -1,3 +1,8 @@
+2007-08-13  Sandy Armstrong  <sanfordarmstrong@gmail.com>
+
+	* index.html: Updated for 0.7.4 release.
+	* download.html: Ditto.
+
 2007-08-05  Sandy Armstrong  <sanfordarmstrong@gmail.com>
 
 	* index.html: Updated for 0.7.3 release.
